# voip-ai-agent

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.app  Dockerfile.tts  GEMINI.md  README.markdown  README.md  app.py  compose.rag.yaml  docker-compose.yml  pbx_installer.sh  pyproject.toml  requirements-app.txt  requirements-tts.txt  requirements.txt  sip_ack.pcap  test_ari.py  test_ws.py  tts-constraints.txt
app/: main.py
app/audio/: stream.py
app/dialog/: state.py
app/evaluation/: tracker.py
app/nlu/: agent.py  llama.py  policy.py
app/rag/: retriever.py
app/stt/: client.py
app/tools/: crm.py
app/tts/: client.py
app/utils/: ari_client.py  emotion_analyzer.py  guardrails.py  text_normalizer.py
config/: .env.example  app_config.yaml  data_processing_config.yaml  normalization_rules.yaml
config/training/: config_finetune_vi.yaml
data/nlp/: knowledge_base.json
docs/: PLAN.md  README.md
grammars/: intent_json.gbnf
schemas/: intent.schema.json
scripts/: ingest.py  run.sh  safe_clean.sh
scripts/diagnostics/: analyze_audio_data.py  analyze_text_data.py  debug_trimming.py  inspect_parquet_file.py  inspect_processed_data.py  test_ari.py  test_ws.py
scripts/preparation/: create_manifest.py  download_dataset.py  prepare_audio_parquet.py
scripts/setup/: install_docker.sh  run.sh  setup_env.sh
scripts/training/: run_finetune.py
src/: config.py  main.py
tests/: conftest.py  test_energy_vad.py  test_streaming_pipeline.py  test_stt_module.py
tools/: healthcheck_app.py
tts_server/: api.py  healthcheck.py  server.py
(+25 files in other folders)
